# file-sharing-web

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  wait-for-postgres.sh
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  (+3 more)
migrations/: env.py
migrations/versions/: 2bfdc0a76ce7_change_user_model.py  459219acd400_roles.py  4be3ffccbb67_add_user_name_unique.py  5cc06c832caf_images_and_tags.py  5f7d466187e6_init.py  80f85d2a898c_comments.py  ad17aaab82c8_m_2_m.py  adf1a7e85772_m_2_m2.py  d3f259919339_user_in_comments.py
src/conf/: config.py
src/dependencies/: auth.py  db.py  roles.py
src/models/: comment.py  image.py  role.py  user.py
src/repository/: base_repository.py  comments.py  images.py  tags.py  users.py
src/routes/: auth.py  comment.py  images.py  users.py
src/schemas/: comment_example.py  image.py  tag.py  user.py
src/services/: auth.py  hash_handler.py  media_storage.py
tests/: test_hash_handler.py  test_repository_base_repository.py
tests/auth/: test_routes_auth.py  test_services_auth.py
tests/comments/: test_comments_repo.py
tests/dependencies/: test_dependencies_db.py  test_dependencies_roles.py
tests/images/: test_repository_images.py  test_repository_tags.py  test_routes_images.py  test_services_media_storage.py
tests/routes/: conftest.py  test_routes_images.py
tests/tests_users/: test_repository_users.py  test_routes_users.py  test_schemas_users.py
(+2 files in other folders)
